tests/negative/gold/interface1_test.gold
tests/negative/interface1_test.toit:10:8: error: Can't instantiate interface 'A'
  a := A
       ^
tests/negative/interface1_test.toit:11:8: error: Can't instantiate interface 'B'
  b := B
       ^
Compilation failed.
